[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "nxfive",email = "kontakt@nxfive.pl"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
numpy = "^2.2.4"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"

[tool.poetry]
packages = [{include = "project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
